# openea-graph

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FOUNDATIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
changesets/: example-ai-import.json
docs/: getting-started.md  releasing.md
docs/design/: first-repository.md
examples/gemeente-demo/: metadata.json  relationships.json  resources.json
examples/workspace-start/: metadata.json  resources.json
metamodels/archimate/: constraints.json  package.json  reasoning.json  relationship-types.json  resource-types.json
metamodels/core/: package.json  reasoning.json  relationship-types.json
metamodels/gemma/: package.json  resource-types.json
openea/: __init__.py  cli.py  initializer.py  reasoner.py  validator.py
repository/: metadata.json
rfc/: RFC-0001-foundational-decisions.md  RFC-0003-resource-lifecycle-and-confidence.md  RFC-0004-workspace-and-provisional-namespaces.md
schemas/: changeset.schema.json  provenance.schema.json  relationship.schema.json  resource.schema.json
specification/: 000-introduction.md  001-core-principles.md  002-core-model.md  003-uri.md  004-repository.md  005-changesets.md  006-reasoning.md
tests/: test_validator.py
