[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openea-graph"
version = "0.1.0.dev0"
description = "Minimal validator and reasoner for OpenEA Graph 0.1"
requires-python = ">=3.10"

[project.scripts]
openea = "openea.cli:main"

[tool.setuptools.packages.find]
include = ["openea*"]
